# DESKTOP-WEATHER-APP

./: CMakeLists.txt  CommitTest.txt  README.md  Resource.qrc  day.cpp  day.h  day.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  timeforuse.cpp  timeforuse.h  weatherAPI.cpp  weatherAPI.h
